fix(docs): fix js overriding anchors in dictionary

--- a/7.0.0-beta2/netlogo7intro.html
+++ b/7.0.0-beta2/netlogo7intro.html
@@ -854,5 +854,5 @@ your preference by using the
 option of the <a href="netlogopreferences.html#overview">NetLogo Preferences Dialog</a> to enable or
 disable data collection.
 If you have any questions or concerns about the collection and storage of this data,
-feel free to contact the NetLogo team at <a href="m&#97;&#x69;&#x6c;&#x74;&#111;:&#102;&#x65;&#101;&#100;&#x62;ac&#x6b;@&#99;&#x63;l&#x2e;&#110;&#111;rt&#104;&#x77;&#101;&#115;te&#114;n&#x2e;&#101;&#100;&#x75;">&#102;&#x65;&#101;&#x64;&#x62;&#97;&#x63;k&#x40;&#x63;&#99;&#108;.&#x6e;&#x6f;&#x72;t&#x68;w&#101;&#115;&#116;&#x65;&#114;&#x6e;&#x2e;&#101;&#100;&#x75;</a>.</p>
+feel free to contact the NetLogo team at <a href="&#109;a&#105;&#x6c;&#116;&#x6f;&#58;&#x66;&#101;&#101;&#100;&#x62;&#x61;&#99;k&#x40;&#99;&#x63;&#x6c;&#x2e;&#110;&#x6f;&#114;&#116;&#104;&#x77;&#101;s&#x74;&#101;&#x72;&#x6e;&#x2e;&#x65;d&#x75;">&#102;e&#101;&#100;&#x62;&#97;c&#x6b;&#x40;&#99;&#x63;&#108;&#x2e;no&#x72;&#116;&#x68;&#119;e&#x73;&#116;&#x65;&#x72;&#110;&#x2e;e&#100;&#117;</a>.</p>
 </main>
