--- a/7.0.0-beta2/faq.html
+++ b/7.0.0-beta2/faq.html
@@ -694,7 +694,7 @@ colored blocks.</p>
 or (at your option) any later version.</p>
 <p>Commercial licenses are also available. To inquire about commercial licenses,
 please contact Uri Wilensky at
-<a href="mailto:netlogo-commercial-admin@ccl.northwestern.edu"><a href="m&#x61;&#x69;&#x6c;&#116;&#111;&#58;&#x6e;&#x65;&#x74;&#108;o&#103;&#x6f;&#45;c&#111;&#109;&#109;e&#x72;&#x63;&#105;a&#x6c;&#45;ad&#x6d;&#105;&#x6e;@&#x63;c&#108;&#46;&#x6e;&#111;r&#116;h&#x77;&#x65;&#115;&#x74;&#x65;&#114;&#110;&#46;&#101;&#x64;&#117;">n&#x65;&#116;&#108;&#111;&#103;o&#x2d;&#99;&#x6f;&#109;&#109;e&#x72;&#x63;&#x69;&#97;&#x6c;-&#x61;&#100;&#x6d;&#x69;&#110;&#64;c&#x63;l.&#110;&#111;&#114;t&#104;w&#101;&#115;&#116;&#101;&#114;&#x6e;&#x2e;&#101;&#100;&#x75;</a></a>.</p>
+<a href="mailto:netlogo-commercial-admin@ccl.northwestern.edu"><a href="&#109;a&#105;&#108;t&#x6f;:&#x6e;&#x65;&#116;&#x6c;&#x6f;&#x67;o&#x2d;&#x63;&#111;&#x6d;m&#101;&#114;&#99;&#105;&#x61;&#108;&#45;&#x61;&#x64;&#x6d;i&#x6e;&#64;&#99;&#99;&#108;&#x2e;&#110;o&#x72;&#x74;hw&#x65;&#x73;t&#x65;&#x72;n&#46;&#101;&#100;&#117;">&#110;&#x65;&#116;&#108;&#111;&#103;&#111;&#x2d;&#99;&#x6f;&#109;&#109;&#101;r&#x63;&#x69;&#97;&#x6c;&#x2d;&#97;&#100;&#x6d;&#x69;n@&#x63;&#x63;l&#x2e;&#110;&#x6f;r&#116;&#104;&#119;&#x65;&#115;&#116;e&#x72;&#x6e;.&#101;&#100;u</a></a>.</p>
 <p>The source code is
 <a href="https://github.com/NetLogo/NetLogo" target="_blank">on GitHub, here</a>. Development discussion is
 on the <a href="https://groups.google.com/group/netlogo-devel" target="_blank">netlogo-devel</a> group.</p>
