--- a/7.0.0-beta2/netlogopreferences.html
+++ b/7.0.0-beta2/netlogopreferences.html
@@ -659,7 +659,7 @@ This information is analyzed by the NetLogo team in order to understand how ofte
 certain NetLogo features are being used, so as to inform development priorities.
 No personal or identifying information will be collected.
 If you have any questions or concerns about the collection and storage of this data,
-feel free to contact the NetLogo team at <a href="&#x6d;&#97;i&#x6c;&#x74;&#111;&#x3a;&#102;&#101;&#101;&#100;&#x62;&#97;c&#107;&#x40;&#x63;&#x63;&#108;.n&#111;&#114;&#x74;hw&#x65;&#x73;t&#101;&#114;&#x6e;&#46;&#101;&#x64;&#117;">&#102;&#101;&#x65;&#x64;&#98;&#97;&#x63;&#107;&#x40;&#99;&#x63;&#x6c;.n&#x6f;&#114;t&#x68;&#119;&#x65;&#115;&#116;e&#114;&#110;.&#101;&#100;&#x75;</a>.</p>
+feel free to contact the NetLogo team at <a href="&#109;&#x61;i&#x6c;&#x74;&#111;&#58;&#102;&#101;&#x65;&#100;&#x62;&#97;&#x63;&#107;@&#x63;&#99;&#108;.&#x6e;&#x6f;&#x72;&#116;&#104;w&#101;&#x73;te&#114;&#x6e;&#46;&#x65;&#100;&#x75;">f&#101;&#101;&#x64;&#x62;&#97;&#x63;&#107;@&#99;&#x63;l&#46;&#x6e;&#x6f;r&#x74;&#x68;w&#101;&#115;&#x74;&#101;&#x72;&#x6e;&#46;&#x65;&#100;u</a>.</p>
 <h2><a href="#code-preferences" id="code-preferences" class="section-anchor">Code Preferences</a></h2>
 <h3><a href="#sort-order-of-procedures-menu" id="sort-order-of-procedures-menu" class="section-anchor">Sort order of procedures menu</a></h3>
 <p>Choices:</p>
