Fix UI issues on Windows

--- a/7.0.0-beta2/faq.html
+++ b/7.0.0-beta2/faq.html
@@ -698,7 +698,7 @@ colored blocks.</p>
 or (at your option) any later version.</p>
 <p>Commercial licenses are also available. To inquire about commercial licenses,
 please contact Uri Wilensky at
-<a href="mailto:netlogo-commercial-admin@ccl.northwestern.edu"><a href="&#109;a&#105;&#108;t&#x6f;:&#x6e;&#x65;&#116;&#x6c;&#x6f;&#x67;o&#x2d;&#x63;&#111;&#x6d;m&#101;&#114;&#99;&#105;&#x61;&#108;&#45;&#x61;&#x64;&#x6d;i&#x6e;&#64;&#99;&#99;&#108;&#x2e;&#110;o&#x72;&#x74;hw&#x65;&#x73;t&#x65;&#x72;n&#46;&#101;&#100;&#117;">&#110;&#x65;&#116;&#108;&#111;&#103;&#111;&#x2d;&#99;&#x6f;&#109;&#109;&#101;r&#x63;&#x69;&#97;&#x6c;&#x2d;&#97;&#100;&#x6d;&#x69;n@&#x63;&#x63;l&#x2e;&#110;&#x6f;r&#116;&#104;&#119;&#x65;&#115;&#116;e&#x72;&#x6e;.&#101;&#100;u</a></a>.</p>
+<a href="mailto:netlogo-commercial-admin@ccl.northwestern.edu"><a href="&#109;&#x61;&#105;&#108;&#x74;o&#x3a;&#x6e;&#101;&#x74;&#x6c;&#x6f;&#x67;&#111;&#x2d;&#x63;om&#109;&#101;&#x72;&#x63;&#105;&#97;l&#x2d;&#97;&#100;&#109;&#x69;&#110;&#x40;&#x63;c&#x6c;.&#x6e;&#x6f;&#x72;t&#x68;&#119;ester&#110;&#x2e;&#x65;&#x64;&#117;">&#x6e;&#x65;&#116;l&#x6f;go&#45;&#99;&#x6f;&#x6d;&#109;&#101;&#x72;&#x63;&#x69;a&#108;&#45;a&#x64;&#109;&#x69;&#x6e;&#64;&#x63;&#99;l.&#110;&#x6f;&#x72;&#116;&#104;&#x77;&#101;&#x73;&#x74;&#x65;&#114;n.&#x65;d&#117;</a></a>.</p>
 <p>The source code is
 <a href="https://github.com/NetLogo/NetLogo" target="_blank">on GitHub, here</a>. Development discussion is
 on the <a href="https://groups.google.com/group/netlogo-devel" target="_blank">netlogo-devel</a> group.</p>
