--- a/7.0.0-beta2/netlogo7intro.html
+++ b/7.0.0-beta2/netlogo7intro.html
@@ -858,5 +858,5 @@ your preference by using the
 option of the <a href="netlogopreferences.html#overview">NetLogo Preferences Dialog</a> to enable or
 disable data collection.
 If you have any questions or concerns about the collection and storage of this data,
-feel free to contact the NetLogo team at <a href="&#109;a&#105;&#x6c;&#116;&#x6f;&#58;&#x66;&#101;&#101;&#100;&#x62;&#x61;&#99;k&#x40;&#99;&#x63;&#x6c;&#x2e;&#110;&#x6f;&#114;&#116;&#104;&#x77;&#101;s&#x74;&#101;&#x72;&#x6e;&#x2e;&#x65;d&#x75;">&#102;e&#101;&#100;&#x62;&#97;c&#x6b;&#x40;&#99;&#x63;&#108;&#x2e;no&#x72;&#116;&#x68;&#119;e&#x73;&#116;&#x65;&#x72;&#110;&#x2e;e&#100;&#117;</a>.</p>
+feel free to contact the NetLogo team at <a href="&#x6d;&#97;&#105;&#x6c;&#116;&#111;&#x3a;&#x66;e&#x65;d&#98;&#x61;&#x63;&#x6b;&#x40;&#99;&#x63;&#x6c;.&#110;&#x6f;&#114;&#116;&#x68;&#x77;&#x65;&#115;&#x74;&#x65;r&#110;.&#101;&#x64;&#117;">&#102;&#x65;&#x65;&#x64;&#98;&#97;&#99;&#x6b;&#x40;&#x63;&#99;&#x6c;&#46;n&#111;rth&#119;&#101;&#115;&#x74;&#x65;&#x72;n&#x2e;&#101;&#100;&#x75;</a>.</p>
 </main>
