--- a/7.0.0-beta2/contact.html
+++ b/7.0.0-beta2/contact.html
@@ -530,7 +530,7 @@ our staff and our various research activities.</p>
 or try this group:
 <a href="http://groups.google.com/d/forum/netlogo-users" target="_blank">http://groups.google.com/d/forum/netlogo-users</a>.</p>
 <p>If you have feedback, suggestions, or questions, you may write us at
-<a href="m&#97;&#x69;l&#x74;&#111;:&#x66;&#x65;&#101;&#100;&#x62;&#x61;&#x63;k&#64;&#99;&#99;l&#x2e;&#110;&#x6f;&#114;&#116;&#x68;&#x77;&#101;&#115;&#x74;&#101;&#114;&#x6e;&#46;&#101;&#x64;u">&#102;&#101;e&#x64;b&#97;&#99;&#x6b;&#x40;&#99;&#99;&#x6c;&#46;&#x6e;&#x6f;&#x72;&#x74;&#104;&#119;&#x65;&#x73;t&#x65;&#114;&#110;&#x2e;&#101;&#100;u</a>.</p>
+<a href="&#x6d;&#97;i&#108;&#x74;&#111;:&#x66;&#101;&#x65;&#x64;&#98;&#x61;&#99;&#107;@cc&#x6c;.&#x6e;&#111;rt&#104;&#119;&#101;s&#116;&#x65;&#x72;&#x6e;&#46;&#101;&#x64;&#x75;">&#102;&#x65;e&#100;&#x62;a&#x63;&#x6b;&#64;&#99;&#99;&#x6c;&#46;&#x6e;&#x6f;&#x72;&#116;&#104;&#x77;&#101;s&#116;&#101;&#x72;&#110;&#x2e;&#x65;&#100;u</a>.</p>
 <h2><a href="#reporting-bugs" id="reporting-bugs" class="section-anchor">Reporting bugs</a></h2>
 <p>Our public bug tracker is on GitHub at
 <a href="https://github.com/NetLogo/NetLogo/issues" target="_blank">https://github.com/NetLogo/NetLogo/issues</a>.
@@ -551,7 +551,7 @@ clicking the System tab.</li>
 message into your email, or make a screen capture if you are unable to copy
 and paste.</li>
 </ul>
-<p>We also accept bug reports by email at <a href="&#109;&#x61;&#105;&#x6c;&#116;&#x6f;:&#x62;&#x75;&#103;&#x73;&#x40;&#x63;&#99;&#x6c;&#x2e;&#110;&#x6f;&#114;t&#104;w&#x65;&#x73;&#x74;&#101;&#114;&#110;&#46;&#101;&#100;u">&#98;&#x75;&#103;&#x73;&#x40;c&#x63;&#x6c;&#x2e;&#110;o&#x72;&#x74;&#104;&#x77;&#x65;&#115;&#116;&#x65;&#x72;&#110;&#46;&#101;d&#x75;</a>.</p>
+<p>We also accept bug reports by email at <a href="&#109;&#97;ilt&#x6f;&#x3a;&#x62;&#117;&#103;&#x73;&#64;&#x63;&#99;&#x6c;&#46;n&#x6f;&#x72;&#x74;&#104;&#119;&#x65;&#115;&#x74;&#x65;&#114;&#x6e;&#x2e;&#101;&#x64;&#x75;">&#x62;&#117;&#x67;&#115;&#64;&#99;&#x63;&#x6c;&#46;&#110;&#x6f;&#114;&#116;h&#x77;e&#x73;t&#x65;&#x72;n&#46;&#x65;&#100;u</a>.</p>
 <h2><a href="#open-source" id="open-source" class="section-anchor">Open source</a></h2>
 <p>NetLogo is free, open source software. The source code is hosted at
 <a href="https://github.com/NetLogo/NetLogo" target="_blank">https://github.com/NetLogo/NetLogo</a>. Contributions from interested users are
